[package]
name = "vncclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"                                                                
simplelog = "0.8"                                                               
log = "0.4.8"                                                                   
thiserror = "1.0"                                                               
url = "2.1.1"                                                                   
nmap_xml_parser = { "git" = "https://github.com/Ayrx/nmap_xml_parser" }         
headless_chrome = { "git" = "https://github.com/jeprojects/rust-headless-chrome", "rev" = "c4bb66a1" }
failure = "0.1"                                                                 
socks = "0.3"                                                                   
askama = "0.10"
vnc = "0.4"                                                                     
nessus_xml_parser = "0.1"                                                       
ctrlc = "3.1"                                                                   
clap = "3.2"

